fix code color
fix color issue that code went to black and invisible.

--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 code {
     background-color: black;
+    color:white;
     width:fit-content;
     white-space: pre;
     display:block;
